


DescTools 0.99.41 (2021-04-03)
------------------------------

NEW FUNCTIONS ADDED:
  * NAIf() replaces a vector of elements by NAs. 

UPDATED FUNCTIONS:
  * RevCode() has been extended to process factors and logicals too. 
  
BUGFIXES:
  * 



DescTools 0.99.40 (2021-02-03)
------------------------------

NEW FUNCTIONS ADDED:
  * StrExtractBetween() returns the part of a string bounded by the expression 
    "left" on the left side and "right" on the right side.
  * Some new checks have been added. We will continuously add more 
    in the near future. 
  * GenRandGroups() generates random groups for a vector.  
  * %:% is a "from-to" operator for elements in a vector using match criteria.

UPDATED FUNCTIONS:
  * PasswordDlg() allows to add a checkbox option.
  * BinomRatCI() has undergone some streamlining concerning input and output.
  * AllIdentical() has been rewritten to run 4 times faster.
  * BinomCI() gets new method "blaker".
  * CombN() used an awkward definition of arguments, which was changed 
    from x to n.
  * PlotDot() gets a better positioning algorithm for axes labels, when 
    cex is not 1. Further it's possible to change cex for group pch.
  
BUGFIXES:
  * Classic confidence intervals for Skew() and Kurt() are now reported on
    both sides.
  



DescTools 0.99.39 (2020-12-06)
------------------------------

NEW FUNCTIONS ADDED:
  * GetCalls() returns the function calls used within a given function.
  * BhapkarTest() is a more powerful alternative to StuartMaxwellTest().

UPDATED FUNCTIONS:
  * MultMerge() offers an option to define a merging column.
  * TextToTable() gets a new argument "check.names".
  * Outlier() gets a new option "hampel". 
  * TOne() allows to omit test by setting TEST=NA.
  * BinomCI() gets three more methods "waldcc", "midp" and "lik".
  
BUGFIXES:
  * Bug in Zodiac() led to a wrong zodiac for June 21. (Credits to pmarkun)
  * plot.Desc.numnum() will respect given xlab/ylab now.