@@ -6,6 +6,8 @@ DescTools 0.99.41 (2021-04-03)
 
 NEW FUNCTIONS ADDED:
   * NAIf() replaces a vector of elements by NAs. 
+  * MeanCIn() gives the required samplesize to obtain a confidence interval 
+    of a given width.
 
 UPDATED FUNCTIONS:
   * RevCode() has been extended to process factors and logicals too. 
